2005-02-09  Mark Wielaard  <mark@klomp.org>

	* gnu/java/net/protocol/jar/Connection.java (getJarFile): 
	Rename jar_file to jf.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* gnu/java/net/protocol/jar/Connection.java (getJarFile): Open
	jar file with OPEN_DELETE.
	* java/util/zip/ZipFile.java (ZipFile): Call deleteOnExit when
	OPEN_DELETE is used.

2005-02-09  Michael Koch  <konqueror@gmx.de>

	* java/awt/Scrollbar.java: Reformatted.

2005-02-08  Tom Tromey  <tromey@redhat.com>

	* java/net/URI.java (AUTHORITY_REGEXP): Handle case where user
	name or port is missing.
	(AUTHORITY_USERINFO_GROUP, AUTHORITY_HOST_GROUP,
	AUTHORITY_PORT_GROUP): Updated.

2005-02-08  Craig Black  <craig.black@aonix.com>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c
	(copyState): Pass a JNI global reference to signal handler.
	(realize_cb): Use and free JNI global reference.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkChoicePeer.c
	(create): Pass a JNI global reference to signal handler.
	(selection_changed): Match declaration.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkGenericPeer.c
	(dispose): Do not remove entries from state tables until after widget is
	destroyed.

2005-02-08  Michael Koch  <konqueror@gmx.de>

	* native/jni/java-nio/java_nio_VMDirectByteBuffer.c
	(NIOGetPointer): Handle case of pointer size != 32 bit.
	(NIOGetRawData): Likewise.
	(Java_java_nio_VMDirectByteBuffer_init): Likewise.
	Fixed asking for primitive type 'long'.

2005-02-08  Michael Koch  <konqueror@gmx.de>

	* configure.ac: Define substition variable GTK_CAIRO_ENABLED.
	Fix handling of GTK_CAIRO conditional.
	* gnu/classpath/Configuration.java.in (GTK_CAIRO_ENABLED):
	New constant.
	* gnu/java/awt/peer/gtk/GdkGraphics2D.java (static):
	Throw error when Cairo support was not enabled during configure time.

2005-02-08  Michael Koch  <konqueror@gmx.de>

	* javax/swing/tree/DefaultMutableTreeNode.java:
	Reworked Javadocs all over.