@@ -308,7 +308,8 @@ public abstract class Collator implements Comparator, Cloneable
       }
     catch (MissingResourceException x)
       {
-	return null;
+	pattern = "<0<1<2<3<4<5<6<7<8<9<A,a<b,B<c,C<d,D<e,E<f,F<g,G<h,H<i,I<j,J<k,K" +
+		"<l,L<m,M<n,N<o,O<p,P<q,Q<r,R<s,S<t,T<u,U<v,V<w,W<x,X<y,Y<z,Z";
       }
     try
       {
@@ -316,7 +317,7 @@ public abstract class Collator implements Comparator, Cloneable
       }
     catch (ParseException x)
       {
-	return null;
+	throw (InternalError)new InternalError().initCause(x);
       }
   }
 
